--- a/css/cover.css
+++ b/css/cover.css
@@ -539,3 +539,20 @@ header {
   /* border-radius: 1px; */
   cursor: pointer;
 }
+
+  #gallery-grid img {
+    width: 800px;
+    height: 800px;
+    object-fit: cover;
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+
+  @media (max-width: 768px) {
+    #gallery-grid img {
+      width: 100%;
+      height: auto;
+      aspect-ratio: 1/1;
+    }
+  }
